--- a/influxdb/rootfs/etc/nginx/servers/ingress.conf
+++ b/influxdb/rootfs/etc/nginx/servers/ingress.conf
@@ -5,6 +5,7 @@ server {
     include /etc/nginx/includes/proxy_params.conf;
 
     location / {
+        allow   172.30.32.1;
         allow   172.30.32.2;
         deny    all;
 
